--- a/src/index.css
+++ b/src/index.css
@@ -31,12 +31,12 @@
 
 html {
   font-size: 62.5%;
-  font-family: "Helvetica 400", "Poppins", sans-serif !important;
+  font-family: "Helvetica 400", "Poppins", sans-serif;
 }
 
 body {
   overflow: hidden;
-  font-family: "Helvetica 400", "Poppins", sans-serif !important;
+  font-family: "Helvetica 400", "Poppins", sans-serif;
 }
 
 @font-face {
